force-app/main/default/objects/Vehicle_Calculator__c/Vehicle_Calculator__c.object-meta.xml
<CustomObject>
    <description>calculation on single vehicle</description>
    <label>Vehicle Calculator</label>
    <nameField>
        <displayFormat>VCALC-{0000}</displayFormat>
        <label>Vehicle Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Calculators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>