force-app/main/default/objects/Vehicle_Calculator__c/fields/Batch_calculator_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Batch_calculator_Interest_Rate__c</fullName>
    <formula>/*Vehicle__r.Selected_Batch_Calculator__r.Intrest_rate_financing__c*/

IF(ISPICKVAL(Vehicle__r.Batch_Distribution__c, &quot;Valuta&quot;),  Vehicle__r.Selected_Batch_Calculator__r.Interest_rate_Financing_Valuta__c  , Vehicle__r.Selected_Batch_Calculator__r.Intrest_rate_financing__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Rate - Batch calculator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>