force-app/main/default/objects/Vehicle_Calculator__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <formula>Vehicle__r.Vehicle_Batch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Name</label>
    <type>Text</type>
</CustomField>