force-app/main/default/objects/Vehicle_Calculator__c/fields/Confirmed_Price__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>price is accepted and confirmed by the buyer</description>
    <inlineHelpText>price is accepted and confirmed by the buyer</inlineHelpText>
    <label>Confirmed Price</label>
    <type>Checkbox</type>
</CustomField>