force-app/main/default/objects/Vehicle_Calculator__c/fields/Contract_Fee_On_delivery__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fee_On_delivery__c</fullName>
    <label>Contract Fee - From finance company</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>