force-app/main/default/objects/Vehicle_Calculator__c/fields/Cost_for_period__c.field-meta.xml
<CustomField>
    <fullName>Cost_for_period__c</fullName>
    <formula>/* Tax costs */
Registration_Fee_for_the_period__c
/* Insurance */
+ Vehicle__r.Selected_Batch_Calculator__r.Insurance_cost_for_period__c
/* Infleet and Defleet costs */
+ Vehicle__r.Selected_Batch_Calculator__r.Onboard_Offboard_reduction__c
/* Ownership Tax */
+ (Period__c * Vehicle__r.six_mth_owner_tax__c / 6)
 /* Damage and Service and Tires */
+ Damages_estimate_for_period__c 
+ Tires_Service__c
/* Contract fee */
+ Vehicle__r.Selected_Batch_Calculator__r.Contract_fee__c
/* Leasing cost */
+ (Leasing_Fee_calculated__c * Period__c)
/* Depreciation - cost of selling car with a lost = difference is negative number */
- IF(Difference__c &gt; 0, 0, Difference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>