force-app/main/default/objects/Vehicle_Calculator__c/fields/Cost_per_month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_month__c</fullName>
    <formula>Cost_for_period__c / Period__c</formula>
    <label>Cost per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>