force-app/main/default/objects/Vehicle_Calculator__c/fields/Damages_estimate_for_period__c.field-meta.xml
<CustomField>
    <fullName>Damages_estimate_for_period__c</fullName>
    <label>Damages estimate for period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>