force-app/main/default/objects/Vehicle_Calculator__c/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <label>Interest Rate - From finance company</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>