force-app/main/default/objects/Vehicle_Calculator__c/fields/Interest_Tax_authorities__c.field-meta.xml
<CustomField>
    <fullName>Interest_Tax_authorities__c</fullName>
    <label>Interest Tax authorities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>