force-app/main/default/objects/Vehicle_Calculator__c/fields/Leasing_Fee_batch__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Fee_batch__c</fullName>
    <formula>Vehicle__r.Selected_Batch_Calculator__r.Interest_for_period__c / Period__c</formula>
    <label>Leasing Fee - batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>