force-app/main/default/objects/Vehicle_Calculator__c/fields/Leasing_Fee_calculated__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Fee_calculated__c</fullName>
    <formula>Total_buy_price__c * Interest_Rate__c / 12</formula>
    <label>Leasing Fee - calculated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>