force-app/main/default/objects/Vehicle_Calculator__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>