force-app/main/default/objects/Vehicle_Calculator__c/fields/Proportional_registration_fee__c.field-meta.xml
<CustomField>
    <fullName>Proportional_registration_fee__c</fullName>
    <formula>L94_registration_tax__c +  Interest_Tax_authorities__c +  Vehicle__r.Selected_Batch_Calculator__r.Regulated_tax_at_re_calculation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proportional registration fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>