force-app/main/default/objects/Vehicle_Calculator__c/fields/Registration_Fee_for_the_period__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee_for_the_period__c</fullName>
    <description>0 for Valuta and Full tax vehicles</description>
    <formula>/* tax for period is 0 for valuta and DK-full tax cars */
IF(ISPICKVAL(Vehicle__r.Batch_Distribution__c, &quot;DK - L94&quot;),
  Proportional_registration_fee__c,
		0
)</formula>
    <inlineHelpText>0 for Valuta and Full tax vehicles</inlineHelpText>
    <label>Registration Fee for the period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>