force-app/main/default/objects/Vehicle_Calculator__c/fields/Regulated_tax_at_re_calculation__c.field-meta.xml
<CustomField>
    <fullName>Regulated_tax_at_re_calculation__c</fullName>
    <description>estimated change of registration fee</description>
    <formula>IF(
  Period__c &gt; 4,
  Vehicle__r.Final_tax_after_deduction__c * 0.06 / 100 * Period__c,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>estimated change of registration fee</inlineHelpText>
    <label>Regulated tax at re-calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>