force-app/main/default/objects/Vehicle_Calculator__c/fields/Reimbursement_calculation__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_calculation__c</fullName>
    <description>for DK/L94 vehicles only, calculated from Reimbursement percentage and registration tax</description>
    <formula>/* L94 only */
IF(ISPICKVAL( Vehicle__r.Batch_Distribution__c, &quot;DK - L94&quot;), 
			Reimbursement_percentage__c *  L94_registration_tax__c,
			0
)</formula>
    <inlineHelpText>for DK/L94 vehicles only, calculated from Reimbursement percentage and registration tax</inlineHelpText>
    <label>Reimbursement calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>