force-app/main/default/objects/Vehicle_Calculator__c/fields/Reimbursement_percentage__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_percentage__c</fullName>
    <description>for DK/L94 vehicles only</description>
    <inlineHelpText>for DK/L94 vehicles only</inlineHelpText>
    <label>Reimbursement percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>