force-app/main/default/objects/Vehicle_Calculator__c/fields/Remarketing_Price__c.field-meta.xml
<CustomField>
    <fullName>Remarketing_Price__c</fullName>
    <label>Remarketing Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>