force-app/main/default/objects/Vehicle_Calculator__c/fields/Tires_Service__c.field-meta.xml
<CustomField>
    <fullName>Tires_Service__c</fullName>
    <label>Tires &amp; Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>