force-app/main/default/objects/Vehicle_Calculator__c/fields/Total_buy_price__c.field-meta.xml
<CustomField>
    <fullName>Total_buy_price__c</fullName>
    <formula>IF( ISPICKVAL(Vehicle__r.Batch_Distribution__c, &quot;Full-tax&quot;),
			Vehicle__r.Final_tax_after_deduction__c,
			0
)
+ Vehicle__r.Sixt_puchase_price_excl_VAT__c +  Total_establishing_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total buy price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>