force-app/main/default/objects/Vehicle_Calculator__c/fields/Total_establishing_cost__c.field-meta.xml
<CustomField>
    <fullName>Total_establishing_cost__c</fullName>
    <formula>Vehicle__r.licensePlateCost__c +  Vehicle__r.Delivery_cost__c +  Vehicle__r.handlingCost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total establishing cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>