force-app/main/default/objects/Vehicle_Calculator__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Calculators</relationshipLabel>
    <relationshipName>Vehicle_Calculators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>