force-app/main/default/objects/Vehicle_Calculator__c/fields/Vehicle_Age__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Age__c</fullName>
    <defaultValue>0</defaultValue>
    <description>how old, in months, is the vehicle at the beginning of the calculation period</description>
    <inlineHelpText>how old, in months, is the vehicle at the beginning of the calculation period</inlineHelpText>
    <label>Vehicle Age</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>