force-app/main/default/objects/Vehicle_Calculator__c/fields/VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>VIN_Number__c</fullName>
    <formula>Vehicle__r.vinNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN Number</label>
    <type>Text</type>
</CustomField>