force-app/main/default/objects/Vehicle_Calculator__c/listViews/Filtered_by_Batch.listView-meta.xml
<ListView>
    <fullName>Filtered_by_Batch</fullName>
    <columns>NAME</columns>
    <columns>VIN_Number__c</columns>
    <columns>Period__c</columns>
    <columns>Leasing_Fee_calculated__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Batch_Name__c</field>
        <operation>equals</operation>
        <value>2022-VB-24</value>
    </filters>
    <label>Filtered by Batch (template)</label>
</ListView>