force-app/main/default/objects/Vehicle_Calculator__c/listViews/Procurement_Vehicle_Calculators.listView-meta.xml
<ListView>
    <fullName>Procurement_Vehicle_Calculators</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Batch_Name__c</columns>
    <columns>VIN_Number__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Period__c</columns>
    <columns>Remarketing_Price__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>Remarketing_Price__c</field>
        <operation>equals</operation>
    </filters>
    <label>Procurement: Vehicle Calculators</label>
</ListView>